cli/tests/testdata/run/error_009_extensions_error.js.out
[WILDCARD]error: Uncaught TypeError: Failed to construct 'Event': 1 argument required, but only 0 present.
new Event();
^
    at [WILDCARD]
    at new Event (internal:ext/web/[WILDCARD])
    at [WILDCARD]
